kubernetes/apps/soulseek/manifests/soulseek.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${var.app-name}
  labels:
    app: ${var.app-name}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${var.app-name}
  template:
    metadata:
      labels:
        app: ${var.app-name}
    spec:
      containers:              
        - name: ${var.app-name}
          image: slskd/slskd:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
          ports:
            - name: http
              containerPort: 5030
              protocol: TCP
            - name: https
              containerPort: 5031
              protocol: TCP              
            - name: soulseek
              containerPort: 50300
              protocol: TCP
          volumeMounts:
            - name: appdata
              mountPath: /app
            - name: music
              mountPath: /music
              readOnly: true
            - name: downloads
              mountPath: /downloads              
        - name: vpn
          image: qmcgaw/gluetun:v3.40
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: ${var.app-name}-appdata
        - name: music
          nfs:
            server: ceph-nfs.home
            path: /cephfs/media/Music              
        - name: downloads
          nfs:
            server: ceph-nfs.home
            path: /cephfs/media/downloads
